--- a/JupySessions/COVID-Data-FromGouv.ipynb
+++ b/JupySessions/COVID-Data-FromGouv.ipynb
@@ -7,10 +7,7 @@
     "#  Simple tool to analyze data from www.data.gouv.fr\n",
     "\n",
     "\n",
-    "## Web Sources\n",
-    "https://www.data.gouv.fr/en/datasets/donnees-des-urgences-hospitalieres-et-de-sos-medecins-relatives-a-lepidemie-de-covid-19/\n",
-    "\n",
-    "https://www.data.gouv.fr/fr/datasets/donnees-hospitalieres-relatives-a-lepidemie-de-covid-19/\n"
+    "\n"
    ]
   },
   {
@@ -22,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,6 +34,7 @@
     "\n",
     "# Better formatting functions\n",
     "from IPython.display import display, HTML\n",
+    "from IPython import get_ipython\n",
     "\n",
     "import matplotlib        as MPL\n",
     "import matplotlib.pyplot as PLT\n",
@@ -55,9 +53,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "For now, reduce python warnings, I will look into this later\n"
+     ]
+    }
+   ],
    "source": [
     "import warnings\n",
     "warnings.filterwarnings('ignore')\n",
@@ -68,30 +74,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##  Save figures"
+    "### Import my own stuff\n",
+    "The next cell attempts to give user some information if things improperly setup.\n",
+    "Intended to work both in Jupyter and when executing the Python file directly."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
-    "class ImageMgr(object):\n",
-    "    def __init__(self, rootdir=\".\", chapdir=\"DefaultChap\", imgtype=\"jpg\"):\n",
-    "       \n",
-    "         self.PROJECT_ROOT_DIR = rootdir\n",
-    "         self.CHAPTER_ID=chapdir\n",
-    "         self.imgtype=\".\"+imgtype\n",
-    "            \n",
-    "    def save_fig(self, fig_id, tight_layout=True):\n",
-    "       \"Save the current figure\"\n",
-    "       path = os.path.join(self.PROJECT_ROOT_DIR, \"images\", self.CHAPTER_ID, fig_id + self.imgtype)\n",
-    "       print(\"Saving figure\", fig_id)\n",
-    "       if tight_layout:\n",
-    "          PLT.tight_layout()\n",
-    "       PLT.savefig(path, format='png', dpi=300)\n",
-    "\n"
+    "if not get_ipython() is None and os.path.abspath(\"../source/\") not in sys.path:\n",
+    "    sys.path.append(os.path.abspath(\"../source/\"))\n",
+    "try:\n",
+    "    from lib.utilities     import *\n",
+    "    from lib.figureHelpers import *\n",
+    "    from lib.DataGouvFr    import *\n",
+    "except Exception as err:\n",
+    "    print(\"Could not find library 'lib' with contents 'DataGouvFr' \")\n",
+    "    if get_ipython() is None:\n",
+    "        print(\"Check the PYTHONPATH environment variable should point to 'source' wich contains 'lib'\")\n",
+    "    else:\n",
+    "        print(\"You are supposed to be running in JupySessions, and '../source' should exist\")\n",
+    "    raise err"
    ]
   },
   {
@@ -103,29 +109,6 @@
     "It is expected that your working directory is named `JupySessions`, that it has subdirectories `images/*` \n",
     "where generated images may be stored to avoid overcrowding. At the same level as your working dir\n",
     "there should be directories `../data` for storing input data and `../source` for python scripts, libraries,..."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def checkSetup(chap = None):\n",
-    "    cwd = os.getcwd()\n",
-    "    dp, dir = os.path.split(cwd)\n",
-    "    if ( dir != 'JupySessions'):\n",
-    "       raise(RuntimeError(\"Installation incorrect, check that this executes in 'JupySessions' \"))\n",
-    "    # Check subdirectory f'JupySessions/images/{chap}'\n",
-    "    if chap:\n",
-    "        img = os.path.join(dp,  'JupySessions', 'images', chap)\n",
-    "        if (not os.path.exists( img)):\n",
-    "          raise(RuntimeError(\"Installation incorrect, check that image dir exists at '%s'\" % img ))\n",
-    "    # now check that the expected subdirectories are where expected\n",
-    "    for d in ('data','source'):\n",
-    "       ddir = os.path.join(dp,  d)\n",
-    "       if (not os.path.exists( ddir)):\n",
-    "          raise(RuntimeError(\"Installation incorrect, check that  dir '%s' exists at '%s'\" % (d,ddir )))"
    ]
   },
   {
@@ -150,199 +133,6 @@
    "metadata": {},
    "source": [
     "## Functions"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def read_csvPandas(fname,clearNaN=False, **kwargs):\n",
-    "    \"\"\" Read a csv file, all keywords arguments permitted for pandas.read_csv \n",
-    "        will be honored\n",
-    "    \"\"\"\n",
-    "    df = PAN.read_csv(fname,**kwargs)\n",
-    "    if clearNaN:\n",
-    "        return df.dropna(how=\"all\").dropna(axis=1)\n",
-    "    return df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def read_xlsxPandas(fname,clearNaN=False, **kwargs):\n",
-    "    \"\"\" Read a xlsx file, all keywords arguments permitted for pandas.read_csv \n",
-    "        will be honored\n",
-    "    \"\"\"\n",
-    "    df = PAN.read_excel(fname,**kwargs)\n",
-    "    if clearNaN:\n",
-    "        return df.dropna(how=\"all\").dropna(axis=1)\n",
-    "    return df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class manageDataFileVersions(object):\n",
-    "    \"\"\" For each file name in directory, find which are different versions of same as \n",
-    "        indicated in the file name with pattern yyyy-mm-dd-HHhMM, \n",
-    "    \"\"\"\n",
-    "    def __init__(self, dirpath=\"../data\"):\n",
-    "        \"dirpath is path relative current working directory\"\n",
-    "        self.dirpath = dirpath\n",
-    "        if not os.path.isdir(dirpath):\n",
-    "            raise RuntimeError(f\"Path {dirpath} not directory\")\n",
-    "        self._walk()\n",
-    "    datedFileRex = re.compile(\"\"\"^(?P<hdr>.*[^\\d])\n",
-    "    (?P<year>\\d+)-(?P<month>\\d+)-(?P<day>\\d+)  # Year\n",
-    "    -(?P<hour>\\d+)h(?P<minute>\\d+)             # Time\n",
-    "    (?P<ftr>.*)$\"\"\", re.VERBOSE)    \n",
-    "    \n",
-    "    def _walk(self):\n",
-    "        lfiles = os.listdir(self.dirpath)\n",
-    "        filDir={}\n",
-    "        genDir={}\n",
-    "        for lf in lfiles:\n",
-    "            mobj = manageDataFileVersions.datedFileRex.match(lf)\n",
-    "            if mobj:\n",
-    "               fls = ( int(mobj.groupdict()[z]) for z in  ('year', 'month', 'day','hour','minute') )\n",
-    "               date = datetime.datetime( *fls )\n",
-    "               gen  =  \"!\".join(map (lambda x: mobj.groupdict()[x] , (\"hdr\",\"ftr\")))\n",
-    "               filDir[lf]=(gen,date)\n",
-    "               if gen in genDir:\n",
-    "                    if date > genDir[gen][0]:\n",
-    "                        genDir[gen] = (date,lf)\n",
-    "               else:\n",
-    "                    genDir[gen]= (date,lf, self.dirpath+\"/\"+lf)\n",
-    "        self.filDir = filDir\n",
-    "        self.genDir = genDir\n",
-    "        \n",
-    "    def listMostRecent(self):\n",
-    "        return sorted([  k[1]   for k in self.genDir.values()])\n",
-    "    \n",
-    "    def getRecentVersion(self,file, default=None):\n",
-    "        if file not in self.filDir:\n",
-    "            if not default:\n",
-    "               raise RuntimeError(f\"Unexpected file:'{file}'\")\n",
-    "            elif default is True:\n",
-    "                return file\n",
-    "            else:\n",
-    "                return default\n",
-    "        else:\n",
-    "                return self.genDir[self.filDir[file][0]][1]\n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def setDefaults(dict, optDict, defaultDict):\n",
-    "    for (k,v) in optDict.items():\n",
-    "        dict[k] = v\n",
-    "    for  (k,v) in defaultDict.items():\n",
-    "        if k not in dict:\n",
-    "            dict[k] = v"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class  figureTSFromFrame(object):\n",
-    "    \"\"\"Make a figure from a time series from a DataFrame; \n",
-    "          it is expected that the row index are dates in string.\n",
-    "          These are converted into the elapsed days from start of table, and represented\n",
-    "          in DateTime format.\n",
-    "          Keywords listed in defaultOpts are honored.\n",
-    "    \"\"\"\n",
-    "    defaultOpts = {\"dateFmt\":'%Y-%m-%d', \"figsize\":(10,10)}\n",
-    "    def __init__(self, df, **kwdOpts):\n",
-    "        self.df   = df.copy()\n",
-    "        self.optd = {}\n",
-    "        setDefaults(self.optd, kwdOpts, figureTSFromFrame.defaultOpts)\n",
-    "        self._dtToElapsed()\n",
-    "        \n",
-    "    def _dtToElapsed(self):\n",
-    "        self.df.origIndex = self.df.index\n",
-    "        self.dt = PAN.to_datetime(self.df.index, format=self.optd[\"dateFmt\"]  )\n",
-    "        self.elapsedDays = self.dt - self.dt[0]\n",
-    "        self.df.index = self.elapsedDays.days\n",
-    "        \n",
-    "    def doPlot(self, **kwdOpts):   \n",
-    "        PLT.figure(figsize=self.optd[\"figsize\"])\n",
-    "        PLT.plot(self.df);\n",
-    "        self._plotKwd(kwdOpts)\n",
-    "        \n",
-    "    def doPlotBycol(self, colSel=None, colOpts = {}, **kwdOpts):\n",
-    "        if colSel is None:\n",
-    "           colSel = self.df.columns\n",
-    "        chk = set(colSel)-set(self.df.columns)\n",
-    "        if len(chk)>0:\n",
-    "            raise RuntimeError(f\"Unexpected col names in colSel={chk}\")\n",
-    "        \n",
-    "        PLT.figure(figsize=self.optd[\"figsize\"])\n",
-    "        for c in colSel:\n",
-    "               if c in colOpts:\n",
-    "                    optd = colOpts[c]\n",
-    "               else:\n",
-    "                    optd = {}\n",
-    "               \n",
-    "               PLT.plot(self.df.loc[:,c], **optd); \n",
-    "        self._plotKwd(kwdOpts)\n",
-    "        \n",
-    "    def _plotKwd(self,kwdOpts):\n",
-    "        # plots an axis label\n",
-    "        if \"xlabel\" in kwdOpts:\n",
-    "           PLT.xlabel(kwdOpts[\"xlabel\"]) \n",
-    "        if \"ylabel\" in kwdOpts:\n",
-    "           PLT.ylabel(kwdOpts[\"ylabel\"])\n",
-    "        if \"title\" in kwdOpts:\n",
-    "           PLT.title(kwdOpts[\"title\"])\n",
-    "        # sets our legend for our graph.\n",
-    "        if \"legend\"  in kwdOpts and kwdOpts[\"legend\"]:          \n",
-    "           PLT.legend(self.df.columns,loc='best') ;"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Two examples of using this class is given below:\n",
-    "- a simple one (the <ImgMgr> is defined above, it shows that the plot may be output to file)\n",
-    "```\n",
-    "painter = figureTSFromFrame(dfGr)\n",
-    "painter.doPlot(xlabel=f\"Days since {painter.dt[0]}\",\n",
-    "               title=\"Whole France/Data ER + SOS-medecin\\nAll age groups\",legend=True  )\n",
-    "ImgMgr.save_fig(\"FIG002\")\n",
-    "```\n",
-    "\n",
-    "- a more sophisticated case, where line styles are defined:    \n",
-    "```\n",
-    "painter = figureTSFromFrame(dm)\n",
-    "colOpts = {'dc_F': {\"c\":\"r\",\"marker\":\"v\"},  \n",
-    "           'dc_M': {\"c\":\"b\",\"marker\":\"v\"},\n",
-    "           'rea_F': {\"c\":\"r\",\"marker\":\"o\", \"linestyle\":\"--\"},  \n",
-    "           'rea_M': {\"c\":\"b\",\"marker\":\"o\", \"linestyle\":\"--\"},\n",
-    "           'rad_F': {\"marker\":\"+\"},\n",
-    "           'rad_M': {\"marker\":\"+\"}\n",
-    "          }\n",
-    "painter.doPlotBycol(colOpts = colOpts,\n",
-    "                    xlabel  = f\"Days since {painter.dt[0]}\",\n",
-    "               title=\"Whole France\\ / Hospital\\n Male / Female\\n:Daily patient status (ICU,Hosp) / Accumulated (discharged, dead)\",\n",
-    "               legend=True    ) \n",
-    "               ```"
    ]
   },
   {
@@ -537,7 +327,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
     "for (dat,name) in dataListDescr:\n",
@@ -694,6 +486,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Now analyze hospital data according to sex"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -720,15 +519,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dm.loc[:, 'hosp_M']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "painter = figureTSFromFrame(dm)\n",
     "colOpts = {'dc_F': {\"c\":\"r\",\"marker\":\"v\"},  \n",
     "           'dc_M': {\"c\":\"b\",\"marker\":\"v\"},\n",
@@ -743,6 +533,76 @@
     "               legend=True    ) \n",
     "display(meta_Hosp[[ \"Colonne\",\"Description_EN\" ]])\n",
     "ImgMgr.save_fig(\"FIG004\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Now analyze hospital data according to age\n",
+    "For now the data available in table `data_hospAge` covers a small number of days.... hopefully this may improve, either by more earlier data becoming available, or just by more data being collected day after day!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_hosp_RegAge=data_hospAge.set_index([\"reg\",\"jour\",'cl_age90'])\n",
+    "dhRA=data_hosp_RegAge[ data_hosp_RegAge.index.get_level_values(2)!=0 ].unstack('cl_age90')\n",
+    "dhA = dhRA.groupby(\"jour\").sum()\n",
+    "display(dhA)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "painter = figureTSFromFrame(dhA)\n",
+    "painter.doPlotBycol()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_hosp_RegAge.index.get_level_values(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "display(meta_Ages)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gr_hosp_age =  data_hospAge.groupby(\"jour\").sum()\n",
+    "display(gr_hosp_age)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dm= PAN.concat([d1s,d2s], axis=1)\n",
+    "cols1 = list(map (lambda x: x+\"_M\", d1s.columns))\n",
+    "cols2 = list(map (lambda x: x+\"_F\", d2s.columns))\n",
+    "dm.columns = (*cols1,*cols2)"
    ]
   },
   {
