--- a/JupySessions/COVID-Data-FromGouv.ipynb
+++ b/JupySessions/COVID-Data-FromGouv.ipynb
@@ -19,13 +19,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Sys import\n",
     "import sys, os, re\n",
     "# Common imports\n",
+    "import math\n",
     "import numpy             as NP\n",
     "import numpy.random      as RAND\n",
     "import scipy.stats       as STATS\n",
@@ -53,17 +54,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "For now, reduce python warnings, I will look into this later\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import warnings\n",
     "warnings.filterwarnings('ignore')\n",
@@ -81,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,9 +87,9 @@
     "except Exception as err:\n",
     "    print(\"Could not find library 'lib' with contents 'DataGouvFr' \")\n",
     "    if get_ipython() is None:\n",
-    "        print(\"Check the PYTHONPATH environment variable should point to 'source' wich contains 'lib'\")\n",
+    "        print(\"Check the PYTHONPATH environment variable which should point to 'source' wich contains 'lib'\")\n",
     "    else:\n",
-    "        print(\"You are supposed to be running in JupySessions, and '../source' should exist\")\n",
+    "        print(\"You are supposed to be running in JupySessions, and '../source/lib' should exist\")\n",
     "    raise err"
    ]
   },
@@ -108,7 +101,9 @@
     "\n",
     "It is expected that your working directory is named `JupySessions`, that it has subdirectories `images/*` \n",
     "where generated images may be stored to avoid overcrowding. At the same level as your working dir\n",
-    "there should be directories `../data` for storing input data and `../source` for python scripts, libraries,..."
+    "there should be directories `../data` for storing input data and `../source` for python scripts.\n",
+    "My package library is in `../source/lib`, and users running under Python (not in Jupyter) should\n",
+    "set their PYTHONPATH to include \"../source\" ( *or whatever appropriate* )."
    ]
   },
   {
@@ -403,14 +398,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
     "dfGr = PAN.DataFrame(gr_all_age_regions.copy(), columns=gr_all_age_regions.columns[1:])\n",
-    "painter = figureTSFromFrame(dfGr)\n",
-    "painter.doPlot(xlabel=f\"Days since {painter.dt[0]}\",\n",
-    "               title=\"Whole France/Data ER + SOS-medecin\\nAll age groups\",legend=True  )\n",
-    "\n",
+    "painter = figureTSFromFrame(dfGr,figsize=(12,8))\n",
+    "painter.doPlot()\n",
+    "painter.setAttrs(label=f\"Days since {painter.dt[0]}\",\n",
+    "                 title=\"Whole France/Data ER + SOS-medecin\\nAll age groups\",\n",
+    "                 legend=True,\n",
+    "                 xlabel=f\"Days since {painter.dt[0]}\")\n",
     "        \n",
     "PAN.set_option('display.max_colwidth', None)\n",
     "display(meta_QuotReg[[ \"Colonne\",\"Description_FR\" ]])\n",
@@ -459,10 +458,18 @@
    "source": [
     "gr_all_data_hospNouveau=data_hospNouveau.groupby('jour').sum()\n",
     "dfGrHN = PAN.DataFrame(gr_all_data_hospNouveau)\n",
+    "colOpts = {'incid_dc': {\"c\":\"b\",\"marker\":\"v\"},  \n",
+    "           'incid_rea': {\"c\":\"r\",\"marker\":\"o\", \"linestyle\":\"--\"},\n",
+    "           'incid_rad': {\"marker\":\"+\"},\n",
+    "           'incid_hosp': {\"marker\":\"*\"}\n",
+    "          }\n",
+    "\n",
     "painter = figureTSFromFrame(dfGrHN)\n",
-    "painter.doPlot(xlabel=f\"Days since {painter.dt[0]}\",\n",
-    "               title=\"Whole France (Hospital)\\nDaily variation in patient status\",\n",
-    "               legend=True  ) \n",
+    "painter.doPlot()\n",
+    "painter.setAttrs(colOpts=colOpts,\n",
+    "                 xlabel=f\"Days since {painter.dt[0]}\", \n",
+    "                 title=\"Whole France (Hospital)\\nDaily variation in patient status\",\n",
+    "                 legend=True  ) \n",
     "\n",
     "PAN.set_option('display.max_colwidth', None)\n",
     "display(meta_HospIncid[[ \"Colonne\",\"Description_EN\" ]])"
@@ -477,10 +484,17 @@
     "gr_all_data_hosp=data_hosp.loc[data_hosp[\"sexe\"] == 0 ].groupby('jour').sum()\n",
     "cols = [ c for c in gr_all_data_hosp.columns if c != 'sexe']\n",
     "dfGrH = PAN.DataFrame(gr_all_data_hosp[cols])\n",
+    "colOpts = { 'dc': {\"c\":\"b\",\"marker\":\"v\"},  \n",
+    "           'rea': {\"c\":\"r\",\"marker\":\"o\", \"linestyle\":\"--\"},\n",
+    "           'rad': {\"marker\":\"+\"},\n",
+    "           'hosp': {\"marker\":\"*\"}\n",
+    "          }\n",
     "painter = figureTSFromFrame(dfGrH)\n",
-    "painter.doPlot(xlabel=f\"Days since {painter.dt[0]}\",\n",
-    "               title=\"Whole France / Hospital\\n:Daily patient status (ICU,Hosp) / Accumulated (discharged, dead)\",\n",
-    "               legend=True  ) \n",
+    "painter.doPlot()\n",
+    "painter.setAttrs( colOpts=colOpts,\n",
+    "                  xlabel=f\"Days since {painter.dt[0]}\",\n",
+    "                  title=\"Whole France / Hospital\\n:Daily patient status (ICU,Hosp) / Accumulated (discharged, dead)\",\n",
+    "                 legend=True) \n",
     "display(meta_Hosp[[ \"Colonne\",\"Description_EN\" ]])\n",
     "ImgMgr.save_fig(\"FIG003\")"
    ]
@@ -527,7 +541,8 @@
     "           'rad_F': {\"marker\":\"+\"},\n",
     "           'rad_M': {\"marker\":\"+\"}\n",
     "          }\n",
-    "painter.doPlotBycol(colOpts = colOpts,\n",
+    "painter.doPlotBycol()\n",
+    "painter.setAttrs(colOpts = colOpts,\n",
     "                    xlabel  = f\"Days since {painter.dt[0]}\",\n",
     "               title=\"Whole France\\ / Hospital\\n Male / Female\\n:Daily patient status (ICU,Hosp) / Accumulated (discharged, dead)\",\n",
     "               legend=True    ) \n",
@@ -550,9 +565,19 @@
    "outputs": [],
    "source": [
     "data_hosp_RegAge=data_hospAge.set_index([\"reg\",\"jour\",'cl_age90'])\n",
-    "dhRA=data_hosp_RegAge[ data_hosp_RegAge.index.get_level_values(2)!=0 ].unstack('cl_age90')\n",
-    "dhA = dhRA.groupby(\"jour\").sum()\n",
-    "display(dhA)"
+    "dhRA = data_hosp_RegAge[ data_hosp_RegAge.index.get_level_values(2)!=0 ].unstack('cl_age90')\n",
+    "dhRAg = dhRA.groupby(\"jour\").sum()\n",
+    "\n",
+    "ageClasses = sorted(set(dhRAg.columns.get_level_values(1)))\n",
+    "print(f\"age classes = {ageClasses}\")\n",
+    "\n",
+    "levCat = sorted(set(dhRA.columns.get_level_values(0)))\n",
+    "levAge = sorted(set(dhRA.columns.get_level_values(1)))\n",
+    "subnodeSpec=(lambda i,j:{\"nrows\":i,\"ncols\":j})(*subPlotShape(len(levAge),maxCol=6))\n",
+    "\n",
+    "print(f\"nb age classes:{len(levAge)}\\tsubnodeSpec:{subnodeSpec}\")\n",
+    "if len(levAge) != len(ageClasses):\n",
+    "    raise RuntimeError(\"Inconsistent values for number of age classes\")"
    ]
   },
   {
@@ -561,48 +586,43 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "painter = figureTSFromFrame(dhA)\n",
-    "painter.doPlotBycol()"
+    "colOpts = {'dc':  {\"c\":\"b\",\"marker\":\"v\"},  \n",
+    "           'rea': {\"c\":\"r\",\"marker\":\"o\", \"linestyle\":\"--\"},  \n",
+    "           'rad':  {\"marker\":\"^\"},\n",
+    "           'hosp': {\"marker\":\"+\"}\n",
+    "          }"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
-    "data_hosp_RegAge.index.get_level_values(2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "display(meta_Ages)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "gr_hosp_age =  data_hospAge.groupby(\"jour\").sum()\n",
-    "display(gr_hosp_age)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dm= PAN.concat([d1s,d2s], axis=1)\n",
-    "cols1 = list(map (lambda x: x+\"_M\", d1s.columns))\n",
-    "cols2 = list(map (lambda x: x+\"_F\", d2s.columns))\n",
-    "dm.columns = (*cols1,*cols2)"
+    "painter = figureTSFromFrame(None, subplots=subnodeSpec, figsize=(15,15))\n",
+    "for i in range(len(levAge)):\n",
+    "    cat = ageClasses[i]\n",
+    "    if cat < 90:\n",
+    "        title = f\"Age {cat-9}-{cat}\"\n",
+    "    else: \n",
+    "        title = \"Age 90+\"\n",
+    "        \n",
+    "    dfExtract = dhRAg.loc(axis=1)[:,cat]\n",
+    "    # remove the now redundant information labeled 'cl_age90'\n",
+    "    dfExtract.columns = dfExtract.columns.levels[0]\n",
+    "    painter.doPlotBycol(dfExtract);\n",
+    "    painter.setAttrs(colOpts = colOpts,\n",
+    "                     xlabel  = f\"Days since {painter.dt[0]}\",\n",
+    "                     title   = title,\n",
+    "                     legend  = True    ) \n",
+    "    \n",
+    "    \n",
+    "    painter.advancePlotIndex()\n",
+    "\n",
+    "display(meta_Hosp[[ \"Colonne\",\"Description_EN\" ]])\n",
+    "ImgMgr.save_fig(\"FIG005\")"
    ]
   },
   {
