Bug correction, management of data cache, added graphics and tests

--- a/JupySessions/Pop-Data-FromGouv.ipynb
+++ b/JupySessions/Pop-Data-FromGouv.ipynb
@@ -777,7 +777,7 @@
        "      <th>Code tranches d'age</th>\n",
        "      <td>6</td>\n",
        "      <td>6</td>\n",
-       "      <td>D</td>\n",
+       "      <td>0</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -793,7 +793,7 @@
       ],
       "text/plain": [
        "                    count unique        top freq\n",
-       "Code tranches d'age     6      6          D    1\n",
+       "Code tranches d'age     6      6          0    1\n",
        "Unnamed: 1              6      6  65-74 ans    1"
       ]
      },
@@ -841,7 +841,7 @@
        "      <th>Quelques remarques</th>\n",
        "      <td>10</td>\n",
        "      <td>10</td>\n",
-       "      <td>Source : Insee - Estimations de population</td>\n",
+       "      <td>L'âge s'entend comme l'âge atteint au 1er janv...</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -849,11 +849,11 @@
        "</div>"
       ],
       "text/plain": [
-       "                   count unique                                         top  \\\n",
-       "Quelques remarques    10     10  Source : Insee - Estimations de population   \n",
+       "                   count unique  \\\n",
+       "Quelques remarques    10     10   \n",
        "\n",
-       "                   freq  \n",
-       "Quelques remarques    1  "
+       "                                                                  top freq  \n",
+       "Quelques remarques  L'âge s'entend comme l'âge atteint au 1er janv...    1  "
       ]
      },
      "metadata": {},
@@ -900,7 +900,7 @@
        "      <th>Quelques remarques</th>\n",
        "      <td>8</td>\n",
        "      <td>8</td>\n",
-       "      <td>Source : Insee - Estimations de population</td>\n",
+       "      <td>L'âge s'entend comme l'âge atteint au 1er janv...</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -908,11 +908,11 @@
        "</div>"
       ],
       "text/plain": [
-       "                   count unique                                         top  \\\n",
-       "Quelques remarques     8      8  Source : Insee - Estimations de population   \n",
+       "                   count unique  \\\n",
+       "Quelques remarques     8      8   \n",
        "\n",
-       "                   freq  \n",
-       "Quelques remarques    1  "
+       "                                                                  top freq  \n",
+       "Quelques remarques  L'âge s'entend comme l'âge atteint au 1er janv...    1  "
       ]
      },
      "metadata": {},
@@ -959,7 +959,7 @@
        "      <th>Quelques remarques</th>\n",
        "      <td>10</td>\n",
        "      <td>10</td>\n",
-       "      <td>Source : Insee - Estimations de population</td>\n",
+       "      <td>L'âge s'entend comme l'âge atteint au 1er janv...</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -967,11 +967,11 @@
        "</div>"
       ],
       "text/plain": [
-       "                   count unique                                         top  \\\n",
-       "Quelques remarques    10     10  Source : Insee - Estimations de population   \n",
+       "                   count unique  \\\n",
+       "Quelques remarques    10     10   \n",
        "\n",
-       "                   freq  \n",
-       "Quelques remarques    1  "
+       "                                                                  top freq  \n",
+       "Quelques remarques  L'âge s'entend comme l'âge atteint au 1er janv...    1  "
       ]
      },
      "metadata": {},
@@ -1018,7 +1018,7 @@
        "      <th>Quelques remarques</th>\n",
        "      <td>8</td>\n",
        "      <td>8</td>\n",
-       "      <td>Source : Insee - Estimations de population</td>\n",
+       "      <td>L'âge s'entend comme l'âge atteint au 1er janv...</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -1026,11 +1026,11 @@
        "</div>"
       ],
       "text/plain": [
-       "                   count unique                                         top  \\\n",
-       "Quelques remarques     8      8  Source : Insee - Estimations de population   \n",
+       "                   count unique  \\\n",
+       "Quelques remarques     8      8   \n",
        "\n",
-       "                   freq  \n",
-       "Quelques remarques    1  "
+       "                                                                  top freq  \n",
+       "Quelques remarques  L'âge s'entend comme l'âge atteint au 1er janv...    1  "
       ]
      },
      "metadata": {},
@@ -1077,7 +1077,7 @@
        "      <th>Évolution de la population par département de 2007 à 2012</th>\n",
        "      <td>106</td>\n",
        "      <td>106</td>\n",
-       "      <td>Savoie</td>\n",
+       "      <td>Deux-Sèvres</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1113,12 +1113,19 @@
        "</div>"
       ],
       "text/plain": [
-       "                                                   count unique     top freq\n",
-       "Évolution de la population par département de 2...   106    106  Savoie    1\n",
-       "Unnamed: 1                                           105    105  628733    1\n",
-       "Unnamed: 2                                           106     23   0.005   16\n",
-       "Unnamed: 3                                           105     20       0   18\n",
-       "Unnamed: 4                                           105     29   0.002   12"
+       "                                                   count unique          top  \\\n",
+       "Évolution de la population par département de 2...   106    106  Deux-Sèvres   \n",
+       "Unnamed: 1                                           105    105       628733   \n",
+       "Unnamed: 2                                           106     23        0.005   \n",
+       "Unnamed: 3                                           105     20            0   \n",
+       "Unnamed: 4                                           105     29        0.002   \n",
+       "\n",
+       "                                                   freq  \n",
+       "Évolution de la population par département de 2...    1  \n",
+       "Unnamed: 1                                            1  \n",
+       "Unnamed: 2                                           16  \n",
+       "Unnamed: 3                                           18  \n",
+       "Unnamed: 4                                           12  "
       ]
      },
      "metadata": {},
@@ -1165,14 +1172,14 @@
        "      <th>Évolution de la population par région de 2007 à 2012</th>\n",
        "      <td>23</td>\n",
        "      <td>23</td>\n",
-       "      <td>Hauts-de-France</td>\n",
+       "      <td>Guadeloupe</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Unnamed: 1</th>\n",
        "      <td>22</td>\n",
        "      <td>22</td>\n",
-       "      <td>5973098</td>\n",
+       "      <td>51477469</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1201,19 +1208,19 @@
        "</div>"
       ],
       "text/plain": [
-       "                                                   count unique  \\\n",
-       "Évolution de la population par région de 2007 à...    23     23   \n",
-       "Unnamed: 1                                            22     22   \n",
-       "Unnamed: 2                                            23     14   \n",
-       "Unnamed: 3                                            22     12   \n",
-       "Unnamed: 4                                            22     17   \n",
+       "                                                   count unique         top  \\\n",
+       "Évolution de la population par région de 2007 à...    23     23  Guadeloupe   \n",
+       "Unnamed: 1                                            22     22    51477469   \n",
+       "Unnamed: 2                                            23     14       0.005   \n",
+       "Unnamed: 3                                            22     12       0.002   \n",
+       "Unnamed: 4                                            22     17       0.001   \n",
        "\n",
-       "                                                                top freq  \n",
-       "Évolution de la population par région de 2007 à...  Hauts-de-France    1  \n",
-       "Unnamed: 1                                                  5973098    1  \n",
-       "Unnamed: 2                                                    0.005    4  \n",
-       "Unnamed: 3                                                    0.002    4  \n",
-       "Unnamed: 4                                                    0.001    3  "
+       "                                                   freq  \n",
+       "Évolution de la population par région de 2007 à...    1  \n",
+       "Unnamed: 1                                            1  \n",
+       "Unnamed: 2                                            4  \n",
+       "Unnamed: 3                                            4  \n",
+       "Unnamed: 4                                            3  "
       ]
      },
      "metadata": {},
@@ -3063,7 +3070,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -3077,7 +3084,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3118,8 +3125,10 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
