--- a/JupySessions/COVID-Data-FromGouv-Later.ipynb
+++ b/JupySessions/COVID-Data-FromGouv-Later.ipynb
@@ -17,6 +17,27 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This is weird, apparently needed after transitionning to Ubuntu 21.04 Python 3.9.4, \n",
+    "there must be another dir lib competing ... so order has become important??"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys,os\n",
+    "addPath= [os.path.abspath(\"../source\"),\n",
+    "          os.path.abspath(\"../venv/lib/python3.9/site-packages/\")]\n",
+    "addPath.extend(sys.path)\n",
+    "sys.path = addPath"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -1495,7 +1516,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.6"
+   "version": "3.9.4"
   }
  },
  "nbformat": 4,
