Multiple adjustments, EU-Data handling still fails

--- a/JupySessions/COVID-Data-FromGouv-Later.ipynb
+++ b/JupySessions/COVID-Data-FromGouv-Later.ipynb
@@ -782,7 +782,13 @@
     "           'rea_F': {\"c\":\"r\",\"marker\":\"o\", \"linestyle\":\"--\"},  \n",
     "           'rea_M': {\"c\":\"b\",\"marker\":\"o\", \"linestyle\":\"--\"},\n",
     "           'rad_F': {\"marker\":\"+\"},\n",
-    "           'rad_M': {\"marker\":\"+\"}\n",
+    "           'rad_M': {\"marker\":\"+\"},\n",
+    "           'hosp_M':{},\n",
+    "           'HospConv_M':{},\n",
+    "           'SSR_USLD_M' :{},\n",
+    "           'hosp_F':{},\n",
+    "           'HospConv_F':{},\n",
+    "           'SSR_USLD_F' :{},\n",
     "          }\n",
     "painter.doPlotBycol()\n",
     "painter.setAttrs(colOpts = colOpts,\n",
@@ -808,7 +814,13 @@
     "           'rea_F': {\"c\":\"r\",\"marker\":\"o\", \"linestyle\":\"--\"},  \n",
     "           'rea_M': {\"c\":\"b\",\"marker\":\"o\", \"linestyle\":\"--\"},\n",
     "           'rad_F': {\"marker\":\"+\"},\n",
-    "           'rad_M': {\"marker\":\"+\"}\n",
+    "           'rad_M': {\"marker\":\"+\"},\n",
+    "           'hosp_M':{},\n",
+    "           'HospConv_M':{},\n",
+    "           'SSR_USLD_M' :{},\n",
+    "           'hosp_F':{},\n",
+    "           'HospConv_F':{},\n",
+    "           'SSR_USLD_F' :{},\n",
     "          }\n",
     "painter.doPlotBycol()\n",
     "painter.setAttrs(colOpts = colOpts,\n",
@@ -879,7 +891,13 @@
     "colOpts = {'dc':  {\"c\":\"b\",\"marker\":\"v\"},  \n",
     "           'rea': {\"c\":\"r\",\"marker\":\"o\", \"linestyle\":\"--\"},  \n",
     "           'rad':  {\"marker\":\"^\"},\n",
-    "           'hosp': {\"marker\":\"+\"}\n",
+    "           'hosp': {\"marker\":\"+\"}, \n",
+    "           'hosp_M':{},\n",
+    "           'HospConv_M':{},\n",
+    "           'SSR_USLD_M' :{},\n",
+    "           'hosp_F':{},\n",
+    "           'HospConv_F':{},\n",
+    "           'SSR_USLD_F' :{},\n",
     "          }"
    ]
   },
@@ -914,6 +932,39 @@
     "\n",
     "display(meta_Hosp[[ \"Colonne\",\"Description_EN\" ]])\n",
     "ImgMgr.save_fig(\"FIG067\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "painter = figureTSFromFrame(None, subplots=subnodeSpec, figsize=(15,15))\n",
+    "for i in range(len(levAge)):\n",
+    "    cat = ageClasses[i]\n",
+    "    if cat < 90:\n",
+    "        title = f\"Age {cat-9}-{cat}\"\n",
+    "    else: \n",
+    "        title = \"Age 90+\"\n",
+    "        \n",
+    "    dfExtract = dhRAg.loc(axis=1)[:,cat]\n",
+    "    # remove the now redundant information labeled 'cl_age90'\n",
+    "    dfExtract.columns = dfExtract.columns.levels[0]\n",
+    "    cols = [c for c in dfExtract.columns  if c not in ('rad', 'dc')]\n",
+    "    painter.doPlotBycol(dfExtract[cols]);\n",
+    "    painter.setAttrs(colOpts = colOpts,\n",
+    "                     xlabel  = f\"Days since {painter.dt[0]}\",\n",
+    "                     title   = title,\n",
+    "                     legend  = True    ) \n",
+    "    \n",
+    "    \n",
+    "    painter.advancePlotIndex()\n",
+    "\n",
+    "display(meta_Hosp[[ \"Colonne\",\"Description_EN\" ]])\n",
+    "ImgMgr.save_fig(\"FIG069\")"
    ]
   },
   {
