--- a/JupySessions/COVID-Data-FromGouv.ipynb
+++ b/JupySessions/COVID-Data-FromGouv.ipynb
@@ -19,6 +19,19 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys,os\n",
+    "addPath= [os.path.abspath(\"../source\"),\n",
+    "          os.path.abspath(\"../venv/lib/python3.9/site-packages/\")]\n",
+    "addPath.extend(sys.path)\n",
+    "sys.path = addPath"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
@@ -1406,7 +1419,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.6"
+   "version": "3.9.4"
   }
  },
  "nbformat": 4,
