Provide (somewhat) extended capabilities to handle API at data.gouv.fr, need to search     with tags instead of 'badge' method which does not seem appropriate now/maintained
    Details in README-Bug-X-DataFr.md (name may change, not a bug, a feature change)

--- a/JupySessions/COVID-Data-FromGouv.ipynb
+++ b/JupySessions/COVID-Data-FromGouv.ipynb
@@ -190,14 +190,59 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tagset1 = ({\"tag\":\"covid\"}, {\"tag\":\"covid19\"})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "specOpts={ 'cacheFname': '.cache.rqtTest2.json',\n",
+    "           \"dumpMetaFile\" : \"rqtTest2.meta.dump\",\n",
+    "           \"dumpMetaInfoFile\" : \"rqtTest2.metainfo.dump\",\n",
+    "           'ApiInq'       : 'datasets',\n",
+    "           'ApiInqQuery'  : tagset1,\n",
+    "           'InqParmsDir'  : {},\n",
+    "          }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rex = re.compile('(.*sursaud|^donnees-hospitalieres|^covid-hospit-incid|^sp-pos-).*')\n",
+    "def uselFn(urqt):\n",
+    "                return rex.match(urqt.fname) or rex.match(urqt.url)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [],
    "source": [
-    "dataFileVMgr = manageAndCacheDataFilesFRDG(\"../data\", maxDirSz= 180*(2**10)**2)\n",
+    "dataFileVMgr = manageAndCacheDataFilesFRAPI(\"../data\", maxDirSz= 170*(2**10)**2,\n",
+    "                                            **specOpts)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "dataFileVMgr.getRemoteInfo()\n",
-    "dataFileVMgr.updatePrepare()\n",
+    "dataFileVMgr.updatePrepare()            \n",
+    "dataFileVMgr.updateSelect(displayCount=10 ,  URqtSelector = uselFn)\n",
     "dataFileVMgr.cacheUpdate()"
    ]
   },
@@ -251,9 +296,8 @@
     "hospNouveauCsv = last(\"donnees-hospitalieres-nouveaux-covid19-2020-04-11-19h00.csv\")\n",
     "hospCsv        = last(\"donnees-hospitalieres-covid19-2020-04-11-19h00.csv\")\n",
     "hospEtablCsv   = last(\"donnees-hospitalieres-etablissements-covid19-2020-04-12-19h00.csv\")\n",
-    "weeklyLabCsv   = last(\"donnees-tests-covid19-labo-hebdomadaire-2020-04-16-10h47.csv\")\n",
-    "dailyLabCsv    = last(\"donnees-tests-covid19-labo-quotidien-2020-04-17-19h00.csv\")\n",
-    "\n",
+    "weeklyLabCsv   = last(\"sp-pos-heb-fra-2021-08-09-19h06.csv\")\n",
+    "dailyLabCsv    = last(\"sp-pos-quot-fra-2021-08-09-19h06.csv\")\n",
     "\n",
     "S1 = set (dataFileVMgr.listMostRecent())\n",
     "S2 =set((dailyDepCsv,dailyRegionCsv,dailyFranceCsv, dailyXlsx, weeklyCsv, \n",
@@ -461,7 +505,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [],
    "source": [
@@ -861,6 +905,62 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Modif. August 2021: \n",
+    "- we do not have the comfort of cat 0 summing all ages anymore\n",
+    "- may be it would be better to divide per population.. this would give a different figure\n",
+    "- should we rename columns with the old labels?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "msk=d=data_dailyLab.loc[:,\"jour\"]<=todayStr      #there is an error in the version of the data distrib 05/05/2020\n",
+    "dl=data_dailyLab.loc[msk,:]\n",
+    "dlGrA = dl.groupby('jour').sum()  \n",
+    "#dlGr[\"cl_age90\"]=0     # \n",
+    "dlGr = dlGrA.drop(columns=[\"cl_age90\", \"pop\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dlGr.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def LaboRelabCols(tble):\n",
+    "    corresp={\n",
+    "        'P_f' : 'Pos_f', 'P_h': 'Pos_h', 'P':'Positive', \n",
+    "        'T_f':'Tested_f', 'T_h':'Tested_h', 'T':'Tested'\n",
+    "    }\n",
+    "    rc = [corresp.get(x) for x in tble.columns]\n",
+    "    tble.columns=rc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "LaboRelabCols(dlGr)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -868,17 +968,13 @@
    },
    "outputs": [],
    "source": [
-    "msk=d=data_dailyLab.loc[:,\"jour\"]<=todayStr      #there is an error in the version of the data distrib 05/05/2020\n",
-    "dl=data_dailyLab.loc[msk,:]\n",
-    "dlGr = dl.loc[dl[\"clage_covid\"]==\"0\"].groupby('jour').sum()\n",
-    "\n",
     "painter = figureTSFromFrame(dlGr)\n",
-    "colOpts = {'nb_test': {\"c\":\"b\", \"marker\":\"*\"},  \n",
-    "           'nb_pos':  {\"c\":\"r\", \"marker\":\"+\"},\n",
-    "           'nb_test_h': {\"c\":\"b\",\"marker\":\"o\", \"linestyle\":\"--\"},  \n",
-    "           'nb_test_f': {\"c\":\"g\",\"marker\":\"o\", \"linestyle\":\"--\"},\n",
-    "           'nb_pos_h': {\"c\":\"b\", \"marker\":\"+\"},\n",
-    "           'nb_pos_f': {\"c\":\"g\", \"marker\":\"+\"}\n",
+    "colOpts = {'Tested': {\"c\":\"b\", \"marker\":\"*\"},  \n",
+    "           'Positive':  {\"c\":\"r\", \"marker\":\"+\"},\n",
+    "           'Tested_h': {\"c\":\"b\",\"marker\":\"o\", \"linestyle\":\"--\"},  \n",
+    "           'Tested_f': {\"c\":\"g\",\"marker\":\"o\", \"linestyle\":\"--\"},\n",
+    "           'Pos_h': {\"c\":\"b\", \"marker\":\"+\"},\n",
+    "           'Pos_f': {\"c\":\"g\", \"marker\":\"+\"}\n",
     "          }\n",
     "painter.doPlotBycol()\n",
     "painter.setAttrs(colOpts = colOpts,\n",
@@ -887,17 +983,6 @@
     "               legend=True    ) \n",
     "\n",
     "ImgMgr.save_fig(\"FIG006\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "dlGr.describe()"
    ]
   },
   {
@@ -922,22 +1007,44 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "dataDLab=dataDLab.set_index([\"dep\",\"jour\",'clage_covid'])\n",
-    "dhRA = dataDLab[ dataDLab.index.get_level_values(2)!='0' ].unstack('clage_covid')\n",
+    "dataDLab"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dhRA"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataDLab=dataDLab.set_index([\"jour\",'cl_age90'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dhRA = dataDLab.drop(columns=[\"pop\"]).unstack('cl_age90')\n",
     "dhRAg = dhRA.groupby(\"jour\").sum()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "ageClasses = sorted(set(dhRAg.columns.get_level_values(1)))\n",
@@ -945,11 +1052,14 @@
     "\n",
     "levCat = sorted(set(dhRA.columns.get_level_values(0)))\n",
     "levAge = sorted(set(dhRA.columns.get_level_values(1)))\n",
+    "\n",
     "subnodeSpec=(lambda i,j:{\"nrows\":i,\"ncols\":j})(*subPlotShape(len(levAge),maxCol=6))\n",
     "\n",
     "print(f\"nb age classes:{len(levAge)}\\tsubnodeSpec:{subnodeSpec}\")\n",
     "if len(levAge) != len(ageClasses):\n",
-    "    raise RuntimeError(\"Inconsistent values for number of age classes\")"
+    "    raise RuntimeError(\"Inconsistent values for number of age classes\")\n",
+    "\n",
+    "ageLabs=['All']+[f\"{x-9}-{x}\" for x in ageClasses[1:-1]]+[\"90+\"]"
    ]
   },
   {
@@ -960,12 +1070,12 @@
    },
    "outputs": [],
    "source": [
-    "colOpts = {'nb_test': {\"c\":\"b\", \"marker\":\"*\"},  \n",
-    "           'nb_pos':  {\"c\":\"r\", \"marker\":\"+\"},\n",
-    "           'nb_test_h': {\"c\":\"b\",\"marker\":\"o\", \"linestyle\":\"--\"},  \n",
-    "           'nb_test_f': {\"c\":\"g\",\"marker\":\"o\", \"linestyle\":\"--\"},\n",
-    "           'nb_pos_h': {\"c\":\"b\", \"marker\":\"+\"},\n",
-    "           'nb_pos_f': {\"c\":\"g\", \"marker\":\"+\"}\n",
+    "colOpts = {'Tested': {\"c\":\"b\", \"marker\":\"*\"},  \n",
+    "           'Positive':  {\"c\":\"r\", \"marker\":\"+\"},\n",
+    "           'Tested_h': {\"c\":\"b\",\"marker\":\"o\", \"linestyle\":\"--\"},  \n",
+    "           'Tested_f': {\"c\":\"g\",\"marker\":\"o\", \"linestyle\":\"--\"},\n",
+    "           'Pos_h': {\"c\":\"b\", \"marker\":\"+\"},\n",
+    "           'Pos_f': {\"c\":\"g\", \"marker\":\"+\"}\n",
     "          }"
    ]
   },
@@ -978,15 +1088,18 @@
    "outputs": [],
    "source": [
     "painter = figureTSFromFrame(None, subplots=subnodeSpec, figsize=(15,15))\n",
-    "for i in 'ABCDE':\n",
-    "    cat = meta_Ages.loc[meta_Ages.iloc[:,0]==i].iloc[:,1].values[0]\n",
+    "for i in range(len(ageClasses)):\n",
+    "    cat = ageLabs[i]\n",
+    "    ageSpec = ageClasses[i]\n",
     "    title = f\"Labo Tests\\nAge: {cat}\"\n",
     "\n",
-    "    dfExtract = dhRAg.loc(axis=1)[:,i]\n",
-    "    # remove the now redundant information labeled 'cl_age90'\n",
-    "    dfExtract.columns = dfExtract.columns.levels[0]\n",
-    "    painter.doPlotBycol(dfExtract);\n",
+    "    dfExtract = dhRAg.loc(axis=1)[:,ageSpec]\n",
+    "    # remove the not needed information since we selected by ageSpec\n",
+    "    dfExtract.columns = [col[0] for col in dfExtract.columns]\n",
     "    \n",
+    "    LaboRelabCols(dfExtract)\n",
+    "    \n",
+    "    painter.doPlotBycol(dfExtract);\n",
     "    painter.setAttrs(colOpts = colOpts,\n",
     "                     xlabel  = f\"Days since {painter.dt[0]}\",\n",
     "                     title   = title,\n",
@@ -995,7 +1108,6 @@
     "    \n",
     "    painter.advancePlotIndex()\n",
     "\n",
-    "display(meta_Ages)\n",
     "ImgMgr.save_fig(\"FIG007\")"
    ]
   },
