Improved diagnostics in matplotlib support functions, cleanup in examples concerning data.gouv.fr
Documentation changes

--- a/JupySessions/COVID-Data-FromGouv.ipynb
+++ b/JupySessions/COVID-Data-FromGouv.ipynb
@@ -771,12 +771,21 @@
    "outputs": [],
    "source": [
     "painter = figureTSFromFrame(dm)\n",
-    "colOpts = {'dc_F': {\"c\":\"r\",\"marker\":\"v\"},  \n",
-    "           'dc_M': {\"c\":\"b\",\"marker\":\"v\"},\n",
-    "           'rea_F': {\"c\":\"r\",\"marker\":\"o\", \"linestyle\":\"--\"},  \n",
-    "           'rea_M': {\"c\":\"b\",\"marker\":\"o\", \"linestyle\":\"--\"},\n",
-    "           'rad_F': {\"marker\":\"+\"},\n",
-    "           'rad_M': {\"marker\":\"+\"}\n",
+    "\n",
+    "colOpts = {'dc_F': {\"c\":\"r\",  \"marker\":\"v\"},  \n",
+    "           'dc_M': {\"c\":\"b\",  \"marker\":\"v\"},\n",
+    "           'rea_F': {\"c\":\"r\", \"marker\":\"o\", \"linestyle\":\"--\"},  \n",
+    "           'rea_M': {\"c\":\"b\", \"marker\":\"o\", \"linestyle\":\"--\"},\n",
+    "           'rad_F': {\"c\":\"k\", \"marker\":\"+\"},\n",
+    "           'rad_M': {\"c\":\"y\", \"marker\":\"+\"},\n",
+    "           'hosp_M':{\"c\":\"b\"},\n",
+    "           'HospConv_M':{'c':'c'},\n",
+    "           'SSR_USLD_M' :{'c':'c',\"marker\":'p' },\n",
+    "           'hosp_F':{'c':'r'},\n",
+    "           'HospConv_F':{'c':'m'},\n",
+    "           'SSR_USLD_F' :{'c':'m',\"marker\":'p'},\n",
+    "           'autres_M':{'c':'c', \"linestyle\":\":\"},\n",
+    "           'autres_F':{'c':'m', \"linestyle\":\":\"}\n",
     "          }\n",
     "painter.doPlotBycol()\n",
     "painter.setAttrs(colOpts = colOpts,\n",
@@ -846,10 +855,13 @@
    },
    "outputs": [],
    "source": [
-    "colOpts = {'dc':  {\"c\":\"b\",\"marker\":\"v\"},  \n",
-    "           'rea': {\"c\":\"r\",\"marker\":\"o\", \"linestyle\":\"--\"},  \n",
-    "           'rad':  {\"marker\":\"^\"},\n",
-    "           'hosp': {\"marker\":\"+\"}\n",
+    "colOpts = {'dc': {\"c\":\"b\",\"marker\":\"v\"},  \n",
+    "           'rea': {\"c\":\"b\",\"marker\":\"o\", \"linestyle\":\"--\"},\n",
+    "           'rad': {\"c\":\"r\", \"marker\":\"+\"},\n",
+    "           'hosp':{\"c\":\"k\", \"linestyle\":\"-\"},\n",
+    "           'HospConv':{\"c\":\"c\", \"linestyle\":\"-\"},\n",
+    "           'SSR_USLD' :{\"c\":\"g\",\"linestyle\":\"-\"},\n",
+    "           'autres':{'c':'m'}\n",
     "          }"
    ]
   },
