--- a/JupySessions/COVID-Data-FromGouv-Later.ipynb
+++ b/JupySessions/COVID-Data-FromGouv-Later.ipynb
@@ -800,6 +800,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Reminder of Matplotlib parms:\n",
+    "1. Available markers: \n",
+    "https://matplotlib.org/stable/api/markers_api.html#module-matplotlib.markers\n",
+    "'v', '^', '.', ',', '<', '>', \n",
+    "   '1'-'4'(3 segments around center), '8' (octagon), 'p' (pentagon), 's' (square),\n",
+    "   'P' (+ sign), 'h' 'H' (hexagon), '+', 'x', 'X' \n",
+    "   and more...\n",
+    "1. Available colors : abbreviated: 'b', 'g', 'r', 'c', 'm', 'y', 'k', 'w'\n",
+    "1. Available linestyles: https://matplotlib.org/stable/gallery/lines_bars_and_markers/linestyles.html\n",
+    "   '-' (solid), '--'(dashed), '.' (dotted) \n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -808,18 +824,20 @@
    "outputs": [],
    "source": [
     "painter = figureTSFromFrame(dm)\n",
-    "colOpts = {'dc_F': {\"c\":\"r\",\"marker\":\"v\"},  \n",
-    "           'dc_M': {\"c\":\"b\",\"marker\":\"v\"},\n",
-    "           'rea_F': {\"c\":\"r\",\"marker\":\"o\", \"linestyle\":\"--\"},  \n",
-    "           'rea_M': {\"c\":\"b\",\"marker\":\"o\", \"linestyle\":\"--\"},\n",
-    "           'rad_F': {\"marker\":\"+\"},\n",
-    "           'rad_M': {\"marker\":\"+\"},\n",
-    "           'hosp_M':{},\n",
-    "           'HospConv_M':{},\n",
-    "           'SSR_USLD_M' :{},\n",
-    "           'hosp_F':{},\n",
-    "           'HospConv_F':{},\n",
-    "           'SSR_USLD_F' :{},\n",
+    "colOpts = {'dc_F': {\"c\":\"r\",  \"marker\":\"v\"},  \n",
+    "           'dc_M': {\"c\":\"b\",  \"marker\":\"v\"},\n",
+    "           'rea_F': {\"c\":\"r\", \"marker\":\"o\", \"linestyle\":\"--\"},  \n",
+    "           'rea_M': {\"c\":\"b\", \"marker\":\"o\", \"linestyle\":\"--\"},\n",
+    "           'rad_F': {\"c\":\"r\", \"marker\":\"+\"},\n",
+    "           'rad_M': {\"c\":\"r\", \"marker\":\"+\"},\n",
+    "           'hosp_M':{\"c\":\"b\"},\n",
+    "           'HospConv_M':{'c':'c'},\n",
+    "           'SSR_USLD_M' :{'c':'c',\"marker\":'p' },\n",
+    "           'hosp_F':{'c':'r'},\n",
+    "           'HospConv_F':{'c':'m'},\n",
+    "           'SSR_USLD_F' :{'c':'m',\"marker\":'p'},\n",
+    "           'autres_M':{'c':'c', \"linestyle\":\":\"},\n",
+    "           'autres_F':{'c':'m', \"linestyle\":\":\"}\n",
     "          }\n",
     "painter.doPlotBycol()\n",
     "painter.setAttrs(colOpts = colOpts,\n",
@@ -846,18 +864,22 @@
     "           'rea_M': {\"c\":\"b\",\"marker\":\"o\", \"linestyle\":\"--\"},\n",
     "           'rad_F': {\"marker\":\"+\"},\n",
     "           'rad_M': {\"marker\":\"+\"},\n",
-    "           'hosp_M':{},\n",
-    "           'HospConv_M':{},\n",
-    "           'SSR_USLD_M' :{},\n",
-    "           'hosp_F':{},\n",
-    "           'HospConv_F':{},\n",
-    "           'SSR_USLD_F' :{},\n",
+    "           'hosp_M':{\"linestyle\":\"-\"},\n",
+    "           'HospConv_M':{\"linestyle\":\"-\"},\n",
+    "           'SSR_USLD_M' :{\"linestyle\":\"-\"},\n",
+    "           'hosp_F':{\"linestyle\":\"-\"},\n",
+    "           'HospConv_F':{\"linestyle\":\"-\"},\n",
+    "           'SSR_USLD_F' :{\"linestyle\":\"-\"},\n",
+    "           'autres_M':{\"linestyle\":\"-\"},\n",
+    "           'autres_F':{\"linestyle\":\"-\"}\n",
     "          }\n",
+    "\n",
     "painter.doPlotBycol()\n",
     "painter.setAttrs(colOpts = colOpts,\n",
-    "                    xlabel  = f\"Days since {painter.dt[0]}\",\n",
+    "               xlabel  = f\"Days since {painter.dt[0]}\",\n",
     "               title=\"Whole France\\ / Hospital\\n Male / Female\\n:Daily patient status (ICU,Hosp) / Accumulated (dead)\",\n",
-    "               legend=True    ) \n",
+    "               legend=True\n",
+    "                ) \n",
     "display(meta_Hosp[[ \"Colonne\",\"Description_EN\" ]])\n",
     "ImgMgr.save_fig(\"FIG066\")"
    ]
@@ -919,17 +941,14 @@
    },
    "outputs": [],
    "source": [
-    "colOpts = {'dc':  {\"c\":\"b\",\"marker\":\"v\"},  \n",
-    "           'rea': {\"c\":\"r\",\"marker\":\"o\", \"linestyle\":\"--\"},  \n",
-    "           'rad':  {\"marker\":\"^\"},\n",
-    "           'hosp': {\"marker\":\"+\"}, \n",
-    "           'hosp_M':{},\n",
-    "           'HospConv_M':{},\n",
-    "           'SSR_USLD_M' :{},\n",
-    "           'hosp_F':{},\n",
-    "           'HospConv_F':{},\n",
-    "           'SSR_USLD_F' :{},\n",
-    "          }"
+    "colOpts = {'dc': {\"c\":\"b\",\"marker\":\"v\"},  \n",
+    "           'rea': {\"c\":\"b\",\"marker\":\"o\", \"linestyle\":\"--\"},\n",
+    "           'rad': {\"c\":\"r\", \"marker\":\"+\"},\n",
+    "           'hosp':{\"c\":\"k\", \"linestyle\":\"-\"},\n",
+    "           'HospConv':{\"c\":\"c\", \"linestyle\":\"-\"},\n",
+    "           'SSR_USLD' :{\"c\":\"g\",\"linestyle\":\"-\"},\n",
+    "           'autres':{'c':'m'}\n",
+    "          }\n"
    ]
   },
   {
@@ -1180,12 +1199,12 @@
    },
    "outputs": [],
    "source": [
-    "colOpts = {'nb_test': {\"c\":\"b\", \"marker\":\"*\"},  \n",
-    "           'nb_pos':  {\"c\":\"r\", \"marker\":\"+\"},\n",
-    "           'nb_test_h': {\"c\":\"b\",\"marker\":\"o\", \"linestyle\":\"--\"},  \n",
-    "           'nb_test_f': {\"c\":\"g\",\"marker\":\"o\", \"linestyle\":\"--\"},\n",
-    "           'nb_pos_h': {\"c\":\"b\", \"marker\":\"+\"},\n",
-    "           'nb_pos_f': {\"c\":\"g\", \"marker\":\"+\"}\n",
+    "colOpts = {'Tested': {\"c\":\"b\", \"marker\":\"*\"},  \n",
+    "           'Positive':  {\"c\":\"r\", \"marker\":\"+\"},\n",
+    "           'Tested_h': {\"c\":\"b\",\"marker\":\"o\", \"linestyle\":\"--\"},  \n",
+    "           'Tested_f': {\"c\":\"g\",\"marker\":\"o\", \"linestyle\":\"--\"},\n",
+    "           'Pos_h': {\"c\":\"b\", \"marker\":\"+\"},\n",
+    "           'Pos_f': {\"c\":\"g\", \"marker\":\"+\"}\n",
     "          }"
    ]
   },
